syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.sleepless_artery.assignment_service";
option java_outer_classname = "LessonVerificationServiceProto";


service LessonVerificationService {
  rpc VerifyLessonExistence (VerifyLessonExistenceRequest) returns (VerifyLessonExistenceResponse);
}


message VerifyLessonExistenceRequest {
  int64 lessonId = 1;
}

message VerifyLessonExistenceResponse {
  bool existence = 1;
}